--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html>
-
-
 <head>
     <meta charset="utf-8">
     <title>Kin's website</title>
@@ -14,7 +12,7 @@
     <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#contact us">Contact us</a></li>
+        <li><a href="#contact-us">Contact us</a></li>
     </ul>
 </nav>
     <div class="text">
@@ -30,7 +28,7 @@
 </section>
 
 <section class="contact">
-    <h4 id="contact us">Contact us</h4>
+    <h4 id="contact-us">Contact us</h4>
     <p>later inshaallah</p>
 </section>
 
